fix: align more styles to figma (#53)

--- a/packages/theme/src/theme/components/home-footer/index.module.scss
+++ b/packages/theme/src/theme/components/home-footer/index.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: calc(100% - 8 * 2px);
-  margin: 0 auto 90px auto;
+  margin: 0 auto 150px auto;
   padding: 4px;
 }
 
@@ -27,6 +27,12 @@
   margin: 0 8px;
 }
 
+@media (max-width: 1200px) {
+  .container {
+    margin: 0 auto 100px auto;
+  }
+}
+
 @media (max-width: 960px) {
   .container {
     margin: 0 auto 64px auto;
@@ -35,6 +41,6 @@
 
 @media (max-width: 640px) {
   .container {
-    margin: 0 auto 32px auto;
+    margin: 0 auto 16px auto;
   }
 }
